--- a/blocks/title.css
+++ b/blocks/title.css
@@ -2,6 +2,9 @@
   font-family: "Noto_Sans";
   font-weight: 600;
   font-size: 70px;
+  margin: 0;
+  padding-top: 80px;
+  padding-left: 160px;
 }
 
 /*# sourceMappingURL=title.css.map */
