--- a/scss/popup.scss
+++ b/scss/popup.scss
@@ -34,7 +34,7 @@
 	}
 }
 	&__title {
-		margin: 0 auto;
+		margin: 50px auto 78px;
 		font-family: "Noto_Sans", "Arial", sans-serif;
 		font-weight: 600;
 		font-size: 24px;
@@ -51,7 +51,7 @@
 	}
 &__form {
 	display: block;
-	margin: 78px auto;
+	margin: 0 auto;
 }
 	&__input {
 		margin-bottom: 20px;
