--- a/blocks/button.css
+++ b/blocks/button.css
@@ -9,6 +9,7 @@
   font-family: "Noto_Sans", sans-serif;
   font-weight: 600;
   border: 1px;
+  margin-top: 30px;
 }
 .button__subheader {
   display: block;
@@ -27,6 +28,9 @@
 }
 .button__main_footer {
   margin-top: 60px;
+}
+.button__close {
+  margin-top: 233px;
 }
 
 /*# sourceMappingURL=button.css.map */
