--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -33,7 +33,7 @@
   }
 }
 .popup__title {
-  margin: 0 auto;
+  margin: 50px auto 78px;
   font-family: "Noto_Sans", "Arial", sans-serif;
   font-weight: 600;
   font-size: 24px;
@@ -49,7 +49,7 @@
 }
 .popup__form {
   display: block;
-  margin: 78px auto;
+  margin: 0 auto;
 }
 .popup__input {
   margin-bottom: 20px;
