--- a/scss/button.scss
+++ b/scss/button.scss
@@ -11,6 +11,7 @@
 		font-family: "Noto_Sans", sans-serif;
 		font-weight: 600;
 		border: 1px;
+		margin-top: 30px;
 }
 	&__subheader {
 		display: block;
@@ -30,4 +31,7 @@
 	&__main_footer {
 		margin-top: 60px;
 }
+	&__close {
+		margin-top: 233px;
+	}
 }
