--- a/blocks/title.css
+++ b/blocks/title.css
@@ -1,10 +1,12 @@
 .title {
-  font-family: "Noto_Sans";
+  font-family: "Noto_Sans", sans-serif;
   font-weight: 600;
   font-size: 70px;
-  margin: 0;
   padding-top: 80px;
-  padding-left: 160px;
+  padding-left: 80px;
+  margin: 0;
+  max-width: 520px;
+  min-width: 500px;
 }
 
 /*# sourceMappingURL=title.css.map */
