--- a/blocks/subtitle.css
+++ b/blocks/subtitle.css
@@ -1,10 +1,10 @@
 .subtitle {
-  font-family: "Noto_Sans";
+  font-family: "Noto_Sans", sans-serif;
   font-weight: 400;
   font-size: 20px;
   min-width: 500px;
   max-width: 520px;
-  padding-left: 160px;
+  padding-left: 80px;
 }
 
 /*# sourceMappingURL=subtitle.css.map */
