--- a/blocks/team.css
+++ b/blocks/team.css
@@ -1,5 +1,7 @@
 .team {
   background-color: #5036E6;
+  margin: 0;
+  padding: 0;
 }
 .team__image {
   width: 320px;
@@ -29,6 +31,22 @@
   background-color: #5036E6;
   margin: 0 auto;
   padding-top: 175px;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
+}
+.team__wanted__title {
+  display: block;
+}
+.team__wanted__text {
+  display: grid;
+  margin-top: 65px;
+  margin-right: 160px;
+}
+.team__wanted__image {
+  display: grid;
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 .team__card {
   margin-bottom: 20px;
