--- a/scss/subtitle.scss
+++ b/scss/subtitle.scss
@@ -1,8 +1,8 @@
 .subtitle {
-	font-family: "Noto_Sans";
+	font-family: "Noto_Sans", sans-serif;
 	font-weight: 400;
 	font-size: 20px;
 	min-width: 500px;
 	max-width: 520px;
-	padding-left: 160px;
+	padding-left: 80px;
 }
