--- a/blocks/team.css
+++ b/blocks/team.css
@@ -8,7 +8,8 @@
   height: 320px;
 }
 .team__gallery {
-  margin: 0 auto;
+  margin-top: 110px;
+  margin-left: 120px;
   text-align: center;
   width: 85%;
   display: flex;
@@ -32,7 +33,7 @@
   margin: 0 auto;
   padding-top: 175px;
   display: grid;
-  gap: 20px;
+  gap: 0px;
   grid-template-columns: repeat(2, 1fr);
 }
 .team__wanted__title {
@@ -41,7 +42,7 @@
 .team__wanted__text {
   display: grid;
   margin-top: 65px;
-  margin-right: 160px;
+  margin-right: 180px;
 }
 .team__wanted__image {
   display: grid;
