--- a/scss/team.scss
+++ b/scss/team.scss
@@ -7,7 +7,8 @@
 		height: 320px;
 	}
 	&__gallery {
-		margin: 0 auto;
+		margin-top: 110px;
+		margin-left: 120px;
 		text-align: center;
 		width: 85%;
 		display: flex;
@@ -33,7 +34,7 @@
 	margin: 0 auto;
 	padding-top: 175px;
 	display: grid;
-	gap: 20px;
+	gap: 0px;
 	grid-template-columns: repeat(2, 1fr);
 &__title {
 	display: block;
@@ -41,7 +42,7 @@
 	&__text {
 	display: grid;
 	margin-top: 65px;
-	margin-right: 160px;
+	margin-right: 180px;
 }
 	&__image {
 		display: grid;
