--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -9,12 +9,25 @@
   margin-top: 60px;
   font-size: 20px;
   font-family: "Noto_Sans", sans-serif;
+  color: white;
 }
 .footer__subtitle {
   margin-top: 20px;
   font-family: "Noto_Sans", sans-serif;
   font-size: 15.1px;
   color: #8E9199;
+  margin-bottom: 80px;
+}
+@media screen and (max-width: 325px) {
+  .footer__title {
+    font-size: 12px;
+    margin-top: 40px;
+  }
+  .footer__subtitle {
+    font-size: 12px;
+    margin-top: 10px;
+    margin-bottom: 40px;
+  }
 }
 
 /*# sourceMappingURL=footer.css.map */
