--- a/blocks/war.css
+++ b/blocks/war.css
@@ -1,7 +1,54 @@
 .war {
   background-color: black;
-  margin: 0 auto;
-  padding: 0;
+  min-height: 985px;
+  position: relative;
+  overflow: hidden;
+}
+.war__inner {
+  display: flex;
+  padding-top: 80px;
+  flex-direction: column;
+  flex: 1 1 auto;
+}
+.war__image {
+  width: 440px;
+  display: inline-block;
+  margin-left: -70px;
+}
+.war__chess {
+  width: 364px;
+  display: inline-block;
+  margin-right: 35px;
+}
+.war__footer {
+  display: flex;
+  position: relative;
+  vertical-align: bottom;
+  margin-top: 74px;
+  justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .war__footer {
+    margin-top: 140px;
+    margin-left: -193px;
+  }
+}
+@media screen and (max-width: 325px) {
+  .war {
+    min-height: 725px;
+  }
+  .war__inner {
+    padding-top: 20px;
+  }
+  .war__image {
+    display: none;
+  }
+  .war__chess {
+    width: 280px;
+    height: 70px;
+    margin-left: 178px;
+    margin-top: -125px;
+  }
 }
 
 /*# sourceMappingURL=war.css.map */
