--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,1 +1,1 @@
-@import 'variables', 'mixins', 'fonts', 'header', 'page', 'main', 'team', 'button', 'footer', 'logo', 'war', 'card', 'title', 'subtitle', 'popup';
+@import 'variables', 'fonts', 'header','wrapper', 'main','main-section', 'team', 'wanted', 'button', 'footer', 'logo', 'war', 'title', 'subtitle', 'popup';
