--- a/scss/subtitle.scss
+++ b/scss/subtitle.scss
@@ -2,7 +2,15 @@
 	font-family: "Noto_Sans", sans-serif;
 	font-weight: 400;
 	font-size: 20px;
-	min-width: 500px;
-	max-width: 520px;
-	padding-left: 160px;
+	max-width: 500px;
+	color: white;
+	margin-top: 40px;
+	line-height: 130%;
+
+	@media screen and (max-width: 325px){
+		& {
+			font-size: 12px;
+			max-width: 264px;
+		}
+	}
 }
