--- a/blocks/button.css
+++ b/blocks/button.css
@@ -9,7 +9,6 @@
   font-family: "Noto_Sans", sans-serif;
   font-weight: 600;
   border: 1px;
-  margin-top: 30px;
 }
 .button__subheader {
   display: block;
@@ -24,13 +23,45 @@
   line-height: 14.4px;
   font-family: "Noto_Sans", sans-serif;
   font-weight: 500;
-  margin: 62px 740px 0 160px;
-}
-.button__main_footer {
-  margin-top: 60px;
 }
 .button__close {
   margin-top: 233px;
+}
+@media screen and (max-width: 768px) {
+  .button__main {
+    width: 184px;
+    height: 44px;
+  }
+  .button__main_footer {
+    width: 218px;
+    height: 48px;
+  }
+  .button__main_popup {
+    width: 218px;
+    height: 48px;
+    font-size: 15px;
+    margin-top: 242px;
+    margin-bottom: 200px;
+  }
+}
+@media screen and (max-width: 325px) {
+  .button__subheader {
+    width: 63px;
+    height: 40px;
+  }
+  .button__main {
+    width: 140px;
+    height: 30px;
+    font-size: 10px;
+    margin-right: -18px;
+  }
+  .button__main_popup {
+    width: 140px;
+    height: 30px;
+    font-size: 10px;
+    margin-top: 143px;
+    margin-bottom: 120px;
+  }
 }
 
 /*# sourceMappingURL=button.css.map */
