--- a/blocks/logo.css
+++ b/blocks/logo.css
@@ -5,5 +5,28 @@
 .logo__footer {
   margin: 80px auto;
 }
+@media screen and (max-width: 325px) {
+  .logo {
+    width: 26px;
+    height: 36px;
+  }
+  .logo__footer {
+    width: 38px;
+    height: 54px;
+    margin: 40px auto;
+  }
+  .logo__popup {
+    width: 26px;
+    height: 36px;
+    margin: 120px auto 0;
+  }
+}
+@media screen and (max-width: 765px) {
+  .logo__popup {
+    width: 38px;
+    height: 54px;
+    margin-top: 200px;
+  }
+}
 
 /*# sourceMappingURL=logo.css.map */
