--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -20,32 +20,13 @@
   margin: 0 auto;
   align-items: center;
 }
-@media screen and (max-width: 510px) {
-  .popup__container {
-    max-width: 320px;
-  }
-}
-@media screen and (min-width: 320px) and (max-width: 509px) {
-  .popup__container {
-    margin-top: 32px;
-    max-width: 282px;
-    width: 100%;
-  }
-}
 .popup__title {
   margin: 50px auto 78px;
   font-family: "Noto_Sans", "Arial", sans-serif;
   font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
+  font-size: 34px;
+  line-height: 90%;
   color: white;
-}
-@media screen and (min-width: 320px) and (max-width: 510px) {
-  .popup__title {
-    margin: 25px auto 75px;
-    max-width: 238px;
-    font-size: 18px;
-  }
 }
 .popup__form {
   display: block;
@@ -70,14 +51,6 @@
   border-radius: 8px;
   padding-left: 28px;
 }
-@media screen and (min-width: 320px) and (max-width: 509px) {
-  .popup__input {
-    margin: 0 22px 30px 22px;
-    width: 100%;
-    min-width: 500px;
-    max-width: 500px;
-  }
-}
 .popup_opened {
   transition: visibility 0s, opacity 0.6s;
   visibility: visible;
@@ -85,6 +58,24 @@
   color: black;
   background-color: black;
   z-index: 100;
+}
+@media screen and (max-width: 320px) {
+  .popup__title {
+    font-size: 30px;
+    margin-top: 40px;
+  }
+  .popup__input {
+    height: 42px;
+    min-width: 240px;
+    max-width: 240px;
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 765px) {
+  .popup__title {
+    font-size: 34px;
+    margin-top: 40px;
+  }
 }
 
 /*# sourceMappingURL=popup.css.map */
