--- a/scss/button.scss
+++ b/scss/button.scss
@@ -1,5 +1,6 @@
 @import "variables";
 .button {
+
 	&__main {
 		background-color:#009465;
 		border-radius: 8px;
@@ -11,7 +12,6 @@
 		font-family: "Noto_Sans", sans-serif;
 		font-weight: 600;
 		border: 1px;
-		margin-top: 30px;
 }
 	&__subheader {
 		display: block;
@@ -26,12 +26,46 @@
 		line-height: 14.4px;
 		font-family: "Noto_Sans", sans-serif;
 		font-weight: 500;
-		margin: 62px 740px 0 160px;
 	}
-	&__main_footer {
-		margin-top: 60px;
-}
+
 	&__close {
 		margin-top: 233px;
+	}
+
+	@media screen and (max-width: 768px) {
+	&__main {
+		width: 184px;
+		height: 44px;
+	}
+		&__main_footer {
+			width: 218px;
+			height: 48px;
+		}
+		&__main_popup {
+			width: 218px;
+			height: 48px;
+			font-size: 15px;
+			margin-top: 242px;
+			margin-bottom: 200px;
+		}
+}
+	@media screen and (max-width: 325px) {
+		&__subheader {
+			width: 63px;
+			height: 40px;
+		}
+		&__main {
+			width: 140px;
+			height: 30px;
+			font-size: 10px;
+			margin-right: -18px;
+		}
+		&__main_popup {
+			width: 140px;
+			height: 30px;
+			font-size: 10px;
+			margin-top: 143px;
+			margin-bottom: 120px;
+		}
 	}
 }
