--- a/scss/logo.scss
+++ b/scss/logo.scss
@@ -1,7 +1,33 @@
 .logo {
 	width: 38px;
 	height: 54px;
+
 	&__footer {
 		margin: 80px auto;
+	}
+
+	@media screen and (max-width: 325px){
+		& {
+			width: 26px;
+			height: 36px;
+		}
+		&__footer {
+			width: 38px;
+			height: 54px;
+			margin: 40px auto;
+		}
+		&__popup {
+			width: 26px;
+			height: 36px;
+			margin: 120px auto 0;
+		}
+	}
+
+	@media screen and (max-width: 765px){
+		&__popup {
+			width: 38px;
+			height: 54px;
+			margin-top: 200px;
+		}
 	}
 }
