--- a/scss/popup.scss
+++ b/scss/popup.scss
@@ -12,6 +12,7 @@
 	bottom: 0;
 	right: 0;
 	left: 0;
+
 	&__container {
 		background: black;
 		display: flex;
@@ -20,36 +21,16 @@
 		align-items: center;
 	}
 
-	@media screen and (max-width: 510px) {
-	&__container {
-		max-width: 320px;
-	}
-}
-
-@media screen and (min-width: 320px) and (max-width:509px) {
-	&__container {
-		margin-top: 32px;
-		max-width: 282px;
-		width: 100%;
-	}
-}
 	&__title {
 		margin: 50px auto 78px;
 		font-family: "Noto_Sans", "Arial", sans-serif;
 		font-weight: 600;
-		font-size: 24px;
-		line-height: 29px;
+		font-size: 34px;
+		line-height: 90%;
 		color: white;
 	}
 
-	@media screen and (min-width: 320px) and (max-width:510px) {
-		&__title {
-			margin: 25px auto 75px;
-			max-width: 238px;
-			font-size: 18px;
-		}
-	}
-&__form {
+	&__form {
 	display: block;
 	margin: 0 auto;
 }
@@ -72,14 +53,6 @@
 		border-radius: 8px;
 		padding-left: 28px;
 	}
-	@media screen and (min-width: 320px) and (max-width:509px) {
-		&__input {
-			margin: 0 22px 30px 22px;
-			width: 100%;
-			min-width: 500px;
-			max-width: 500px;
-		}
-	}
 
 	&_opened {
 		transition: visibility 0s, opacity .6s;
@@ -88,5 +61,26 @@
 		color: black;
 		background-color: black;
 		z-index: 100;
+	}
+
+	@media screen and (max-width: 320px)  {
+		&__title {
+			font-size: 30px;
+			margin-top: 40px;
+		}
+
+		&__input {
+			height: 42px;
+			min-width: 240px;
+			max-width: 240px;
+			font-size: 12px;
+		}
+	}
+
+	@media screen and (max-width: 765px)  {
+		&__title {
+			font-size: 34px;
+			margin-top: 40px;
+		}
 	}
 }
